<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page_connexion"
    android:background="@color/fond">

    <TextView
        android:id="@+id/titre_connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="197dp"

        android:layout_marginBottom="672dp"
        android:fontFamily="@font/francoisone"
        android:text="@string/connexion_name"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="250dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="145dp"
        android:layout_marginBottom="660dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/erreur"
        android:layout_width="400dp"
        android:layout_height="25dp"

        android:layout_marginStart="33dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="344dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/francoisone"
        android:text=""
        android:textColor="@color/orange"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/connexion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input2"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="520dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/mdp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="44dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="230dp"
        android:fontFamily="@font/francoisone"
        android:text="@string/mdp"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/plain_text_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input" />

    <EditText
        android:id="@+id/plain_text_input2"
        android:layout_width="201dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="167dp"
        android:layout_marginBottom="384dp"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mdp" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="43dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="555dp"
        android:fontFamily="@font/francoisone"
        android:text="@string/mail"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView" />

    <ImageView
        android:id="@+id/connexion"
        android:layout_width="345dp"
        android:layout_height="130dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="174dp"
        android:src="@drawable/connexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plain_text_input2"
        app:layout_constraintVertical_bias="0.895" />

    <ImageView
        android:id="@+id/signUpButton"
        android:layout_width="345dp"
        android:layout_height="130dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="36dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/inscription"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>